# ALBench-S2F

./: .gitignore  ARCHITECTURE.md  Current_status_of_Experiment_0.md  Current_status_of_Experiment_1.md  Current_status_of_project.md  EXPERIMENT_TRACKER.md  README.md  custom_model.py  deploy_cshl.exp  deploy_cshl_check.exp  deploy_malinois_eval.exp  eval_ag.py  pyproject.toml  pyrightconfig.json  run_eval_pool.sh  setup_env.sh  test_head.py
albench/: README.md  __init__.py  evaluation.py  loop.py  pyproject.toml  task.py  utils.py
albench/acquisition/: __init__.py  badge.py  bait.py  base.py  batchbald.py  combined.py  diversity.py  ensemble_acq.py  prior_knowledge.py  random_acq.py  uncertainty.py
albench/data/: __init__.py  base.py  hashfrag_splits.py  k562.py  k562_full.py  loaders.py  pool.py  sequence_utils.py  yeast.py
albench/evaluation_utils/: yeast_testsets.py
albench/models/: __init__.py  alphagenome_heads.py  embedding_cache.py  loss_utils.py  training.py  training_base.py
albench/oracle/: __init__.py  base.py
albench/reservoir/: __init__.py  activity_stratified.py  adaptive_selection.py  base.py  curriculum.py  evoaug.py  evoaug_structural.py  fixed_pool.py  gc_matched.py  genomic.py  in_silico_evolution.py  in_silico_evolution_generative.py  mixed_pool.py  motif_clustering.py  motif_density.py  motif_grammar.py  motif_planted.py  partial_mutagenesis.py  random_sampler.py  recombination.py  tf_motif_shuffle.py  uncertainty_guided.py
albench/student/: __init__.py  base.py  dream_rnn_student.py
albench/visualization/: scaling_plots.py
configs/: config.yaml
data/: __init__.py  k562.py  loaders.py  sequence_utils.py  task.py  utils.py  yeast.py
docs/: presentation_summary_malinois_vs_alphagenome.md  yeast_agent_prompt.md
evaluation/: exp1_eval.py  scaling.py  yeast_testsets.py
experiments/: exp0_k562_scaling.py  exp0_k562_scaling_alphagenome.py  exp0_k562_scaling_alphagenome_cached.py  exp0_k562_scaling_oracle_labels.py  exp0_k562_scaling_oracle_labels_ag.py  exp0_scaling.py  exp0_yeast_scaling.py  exp0_yeast_scaling_alphagenome.py  exp0_yeast_scaling_oracle_labels.py  exp0_yeast_scaling_oracle_labels_ag.py  exp1_1_scaling.py  exp1_2_acquisition.py  exp1_3_analysis.py  exp1_benchmark.py  exp2_rounds.py  exp3_pool_size.py  exp4_cost.py  exp5_best_student.py  generate_oracle_pseudolabels.py  generate_oracle_pseudolabels_k562_ag.py  generate_oracle_pseudolabels_k562_dream.py  generate_oracle_pseudolabels_k562_legnet.py  generate_oracle_pseudolabels_stage2_k562_ag.py  generate_oracle_pseudolabels_yeast_ag.py  generate_oracle_pseudolabels_yeast_dream.py  generate_stage2_pseudolabels_single_fold.py  legnet_arch_sweep.py  plot_exp1_1_scaling.py  reeval_ood.py  train_foundation_cached.py  train_foundation_cached_multitask.py  train_foundation_stage2.py  train_malinois_k562.py  train_ntv3_stage2.py  train_oracle_alphagenome.py  train_oracle_alphagenome_full.py  train_oracle_alphagenome_hashfrag.py  train_oracle_alphagenome_hashfrag_cached.py  train_oracle_alphagenome_yeast.py  train_oracle_dream_rnn.py  (+2 more)
models/: __init__.py  alphagenome_heads.py  base.py  (+18 more)
(+702 files in other folders)
